--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
   <tbody>
     <tr>
       <td>2011-2017</td>
-      <td>Automation Superintendent</td>
+      <td>Automation Superintendent at Seven-Up Bottling Company PLC</td>
     </tr>
     <tr>
       <td>2017-2019</td>
-      <td>Instrumentation Manager</td>
+      <td>Instrumentation Manager at PZ Cussons</td>
     </tr>
     <tr>
       <td>2019-2021</td>
-      <td>Maintenance Engineer</td>
+      <td>Maintenance Engineer at GBFoods</td>
     </tr>
   </tbody>
 
